[package]
name = "kvmi"
version = "0.1.1"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Safe Rust bindings for libkvmi (v6)"
readme = "README.md"
homepage = "https://github.com/Wenzel/kvmi"
repository = "https://github.com/Wenzel/kvmi"
license = "GPL-3.0-only"
keywords = ["KVM", "KVMi", "introspection", "VMI"]
categories = ["api-bindings"]


[dependencies]
log = "0.4.8"
kvmi-sys = "0.2.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"
nix = "0.16.1"
libc = "0.2.66"
libloading = "0.6.1"
mockall = "0.7.1"

