[package]
name = "kvmi"
version = "0.3.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Safe Rust bindings for libkvmi (v6)"
readme = "README.md"
homepage = "https://github.com/Wenzel/kvmi"
repository = "https://github.com/Wenzel/kvmi"
license = "GPL-3.0-only"
keywords = ["KVM", "KVMi", "introspection", "VMI"]
categories = ["api-bindings"]


[dependencies]
log = "0.4.26"
kvmi-sys = "0.3.0"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.19"
nix = "0.29.0"
libc = "0.2.170"
libloading = "0.8.6"
mockall = "0.13.1"
thiserror = "2.0.11"

[dev-dependencies]
env_logger = "0.11.6"
clap = "2.33.3"
indicatif = "0.15.0"

[package.metadata.release]
# releases are managed by cargo release, but publication is done on the CI
# this metadata prevents a misuse when --skip-publish flag is missing from cargo
# release command line
disable-publish = true

[package.metadata.deb]
extended-description = "A collection of utilities to perform virtual machine introspection with libkvmi on KVM"
# force any libc6, otherwise the one from the CI is pinned and is too recent
depends = "libc6"
section = "utility"
priority = "optional"
assets = [["target/release/examples/mem-dump", "usr/bin/kvmi-mem-dump", "755"]]
